<resources>
    <string name="app_name">DRAGINO-LA66</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>



    <string name="home">主页</string>
    <string name="Device_Info">Device Info</string>
    <string name="Config">Config</string>
    <string name="Log">Log</string>
    <string name="home_title">DRAGINO_LA66APP</string>
    <string name="Disconnect">"Disconnect "</string>
    <string name="language">中文</string>
    <string name="device_manager">设备管理</string>
    <string name="no_connected">No Connected</string>
    <string name="on_connected">connected</string>
    <string name="Deveui">Deveui</string>
    <string name="text_switch">设置开关</string>
    <string name="text_node">节点模式</string>
    <string name="text_interrupt">中断模式</string>
    <string name="text_tdc_time">TDC时间选择</string>
    <string name="txt_zdytime">手动输入</string>
    <string name="text_determine">确定</string>
    <string name="text_send">send</string>
    <string name="text_at_instructions">AT指令（点击选择）</string>
    <string name="text_at_corresponding">对应指令：</string>
    <string name="text_code">日志接收编码</string>
    <string name="text_suspend">暂停接收</string>
    <string name="text_code_send">Transmission code selection</string>
    <string name="text_savelog">SaveLog</string>
    <string name="text_clearlog">Clear Log</string>
    <string name="text_noconnect">未连接</string>
    <string name="pattern">Adaptive Data Rate setting</string>
    <string name="pattern1">Adaptive Data Rate setting</string>
    <string name="pattern2">confirmation mode</string>
    <string name="pattern3">Network Join Mode</string>
    <string name="restart">是否重启单片机?</string>
    <string name="NodeMode">节点模式选择</string>
    <string name="InterruptMode">中断模式</string>
    <string name="ABP">ABP</string>
    <string name="OTAA">OTAA</string>
    <string name="Disable">Disable</string>
    <string name="falling_or_rising">falling or rising</string>
    <string name="falling">falling</string>
    <string name="rising">rising</string>
    <string name="Pause_reception">Pause reception</string>
    <string name="Continue_receiving">Continue receiving</string>
    <string name="isConnect">请连接蓝牙才能正常使用</string>
    <string name="hex">hex</string>
    <string name="ascii">ascii</string>
    <string name="Common_instructions">Common instructions</string>
    <string name="at1">重启单片机</string>
    <string name="at2">将参数重置为出厂默认值</string>
    <string name="at3">获取或设置自适应数据速率设置</string>
    <string name="at4">获取或设置网络加入模式(0: ABP, 1: OTAA)</string>
    <string name="at5">获取或设置确认模式（0关闭，1开启）</string>
    <string name="at6">获取或设置应用数据传输间隔，单位为ms</string>
    <string name="at7">获取或设置工作模式</string>
    <string name="at8">Get or Set the trigger interrupt mode(0:Disable,1:falling or rising,2:falling,3:rising)（默认值0）</string>
    <string name="log_Tips">No printable log</string>
    <string name="at9">获取或设置延长 5V 供电时间</string>
    <string name="text_logAddress">存储路径</string>
    <string name="save">保存Log</string>
    <string name="issave">是否保存Log</string>
    <string name="isclearlog">whether clear Log</string>
    <string name="break_off">断开连接</string>
    <string name="onlink">已连接该设备</string>
    <string name="unlink">是否断开该设备</string>
    <string name="work_mode">"work mode "</string>
    <string name="swMode">开关模式选择</string>
    <string name="tdcTime">请选择或输入TDC时间</string>
    <string name="instructions">Please enter the command to send</string>
    <string name="applyBlue">Request Bluetooth read permission</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="on_connet">已连接</string>
    <string name="un_connet">未连接</string>
    <string name="shanghang">上行</string>
    <string name="xiahang">下行</string>
    <string name="unknown">未知</string>
    <string name="text_localurl">根目录/bleLog/</string>
    <string name="at10">设置数据速率</string>
    <string name="at11">设置发射功率</string>
    <string name="at12">打印所有AT指令</string>
    <string name="input_at">Please enter at command</string>
<!--    <string name="input_at">请输入AT指令</string>-->

    <string name="txt_password">请输入密码</string>
    <string name="placePassword">请输入密码</string>
    <string name="placeBle">请连接蓝牙设备</string>
    <string name="passwordInput">请输入密码再操作</string>
    <string name="passwordSuccess">输入密码正确</string>
    <string name="passwordErr">输入密码错误</string>
    <string name="passwordOnSuccess">已经输入过密码</string>
    <string name="deleteDevice">是否删除改log文件</string>
    <string name="deteleLog">提示</string>
    <string name="file">请输入新的文件名</string>
    <string name="fileIsdelete">文件不存在</string>
    <string name="textEmpty">请输入新的文件名</string>
    <string name="home1">主页</string>
</resources>