<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/ll_home"
        android:layout_width="match_parent"
        android:layout_height="65dp">
        <RadioGroup
            android:id="@+id/radio_index"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:background="#000"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tag_home"
                style="@style/bg_home_tag"
                android:checked="true"
                android:drawableTop="@drawable/selector_home"
                android:text="@string/home1"
                android:textColor="@drawable/selector_home_tab_text"/>
            <RadioButton
                style="@style/bg_home_tag"
                android:drawableTop="@drawable/selector_info"
                android:id="@+id/msg_home2"
                android:text="@string/Device_Info"
                android:textColor="@drawable/selector_home_tab_text"/>
            <RadioButton
                style="@style/bg_home_tag"
                android:drawableTop="@drawable/selector_ble"
                android:id="@+id/msg_home1"
                android:text="@string/Config"
                android:textColor="@drawable/selector_home_tab_text"/>

            <RadioButton
                android:id="@+id/home_me"
                style="@style/bg_home_tag"
                android:drawableTop="@drawable/selector_me"
                android:text="@string/Log"
                android:textColor="@drawable/selector_home_tab_text"
                android:visibility="visible"/>
        </RadioGroup>
    </LinearLayout>

    <com.sz.cp2102.view.NoScrollViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_home"
        android:background="@color/white"/>

</RelativeLayout>