<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_titlebar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/statuBar">

        <RelativeLayout
            android:id="@+id/rl_titlebar1"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp">

                <ImageButton
                    android:id="@+id/title_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/img_buttom_close" />
            </RelativeLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/Deveui"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp">


                <ImageButton
                    android:id="@+id/btn_right"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/img_swich" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view1"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_green"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_switch"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/btn_switch"
                android:layout_width="50dp"
                android:layout_height="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_mode"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:gravity="right"
                android:id="@+id/txt1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_interrupt"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="trigger interrupt mode"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_tdc_time"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/txt_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_black_on"
                android:gravity="center"
                android:text="5"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_black"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_time3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_black"
                android:gravity="center"
                android:text="20"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_time4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_black"
                android:gravity="center"
                android:text="40"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/bg_black"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_zdytime"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_white"
            android:gravity="center"
            android:text="@string/text_determine"
            android:textColor="#108D8D"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view2"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_green"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/bnt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_at_instructions"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_atdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="16dp"
            android:text="at介绍"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edittext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="@string/text_at_corresponding"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:theme="@style/MyEditText"
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_greed"
        android:gravity="center"
        android:text="@string/text_send"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#F1F1F1"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/btn_selete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_btn_white"
            android:gravity="center"
            android:text="@string/text_code" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_btn_white"
            android:gravity="center"
            android:text="@string/text_savelog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F1"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/btn_suspend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/bg_btn_white"
            android:gravity="center"
            android:text="@string/Continue_receiving" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_clear_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_btn_white"
            android:gravity="center"
            android:text="@string/text_clearlog" />
    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></ListView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black999" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:theme="@style/MyEditText1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/input_at"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/black999" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:paddingHorizontal="5dp">

            <TextView
                android:id="@+id/btn_send_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_white"
                android:gravity="center"
                android:text="@string/text_code_send" />

            <TextView
                android:id="@+id/btn_send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_greed"
                android:gravity="center"
                android:text="@string/text_send"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>